[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-task-tracker"
version = "0.1.0"
description = "GitHub Action: sync tracker.json tasks to Issues and a Project board"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Diogo Ribeiro", email = "dfr@esmad.ipp.pt" }]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.10"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "setup.py"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true
